fixed nav bar alignment

--- a/common.css
+++ b/common.css
@@ -27,6 +27,7 @@ body {
 
 #nav-btns {
   display: flex;
+  align-items: center;
 }
 
 .nav a {
